Fixed some alignments in header.

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -69,7 +69,7 @@ header {
 
 #header_transporters {
   position:relative;
-  width:140px;
+  width:135px;
   margin-left:3px;
   text-align: left;
   font-size: 0.9em;
@@ -104,7 +104,7 @@ header {
 #header_takers {
   position:relative;
   width:125px;
-  margin-left:3px;
+  margin-left:15px;
   text-align: left;
   font-size: 0.9em;
   background-image: url('header_find.png');
@@ -138,7 +138,7 @@ header {
 #header_givers {
   position:relative;
   width:135px;
-  margin-left:3px;
+  margin-left:15px;
   text-align: left;
   font-size: 0.9em;
   background-image: url('header_give.png');
@@ -234,7 +234,7 @@ header {
 #header_activity {
   position:relative;
   width:110px;
-  margin-left:83px;
+  margin-left:163px;
   text-align: left;
   font-size: 0.9em;
   background-image: url('header_activity.png');
@@ -294,7 +294,7 @@ header {
 }
 
 #header_user {
-  margin-left:13px;
+  margin-left:3px;
   text-align: left;
   font-size: 0.9em;
   border:1px solid;
